# embreex

./: pyproject.toml  setup.py
.github/workflows/: wheels.yml
ci/: embree.json  fetch-embree.py
embreex/: __init__.py  mesh_construction.pyx  rtcore.pxd  rtcore.pyx  rtcore_geometry.pxd  rtcore_geometry_user.pxd  rtcore_ray.pxd  rtcore_scene.pxd  rtcore_scene.pyx  triangles.pyx
examples/: attenuate.py  intersection.py
package/: embree.json  fetch-embree.py
tests/: test_intersection.py
