[build-system]
requires = [
    "setuptools>=59.0",
    "numpy",
    "cython>=3.0"
]
build-backend = "setuptools.build_meta"

[project]
name = "embreex"
requires-python = ">=3.8"
version = "4.4.0rc0"

dependencies = ["numpy"]
description = "Python binding for Intel's Embree ray engine"
readme = {file = "README.md", content-type = "text/markdown"}
license = {file = "LICENSE"}

[project.urls]
Source = "https://github.com/trimesh/embreex"

[tool.setuptools]
zip-safe = false
include-package-data = false

[tool.setuptools.packages]
find = {namespaces = false}

[tool.setuptools.package-data]
embreex = ["*.pxd"]

[tool.cibuildwheel]
skip =  "*i686 *-win32 *musllinux*"
manylinux-x86_64-image = "manylinux_2_28"
before-test = "pip install pytest"
test-command = "pytest -v {project}/tests"
before-build = "python {project}/package/fetch-embree.py --install embree4"

[tool.cibuildwheel.windows]
before-build = "pip install delvewheel && python {project}\\package\\fetch-embree.py --install embree4"
repair-wheel-command = "delvewheel repair --add-path embree4\\bin --no-mangle tbb12.dll;embree4.dll -w {dest_dir} {wheel}"
 
[tool.cibuildwheel.macos]
environment = { MACOSX_DEPLOYMENT_TARGET = "13.0" }
repair-wheel-command = "DYLD_LIBRARY_PATH=embree4/lib delocate-listdeps -a {wheel} && DYLD_LIBRARY_PATH=embree4/lib delocate-wheel --require-archs {delocate_archs} -w {dest_dir} -v {wheel}"

[tool.cibuildwheel.linux]
repair-wheel-command = "LD_LIBRARY_PATH=`realpath embree4/lib`; auditwheel repair -w {dest_dir} {wheel}"

[tool.ruff.lint]
select = ["E", "F", # the default rules
       "B"     # pass bugbear
       	  ]
